Fix overlapping of the translation body when clicking on the advanced search dropdown.
svn path=/src/trunk/Pootle/; revision=12222

--- a/html/style.css
+++ b/html/style.css
@@ -892,10 +892,11 @@ div.advancedsearch
     padding-bottom: 3px;
     padding-left: 3px;
     padding-right: 8px;
-    position: relative;
+    position: absolute;
     z-index: 2;
     display: none;
     margin-top: 0;
+    width: 155px;
 }
 
 div.advancedsearch[dir="rtl"]
